// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PeoplePicker renders correctly 1`] = `
<div
  className=
      ms-BasePicker
      {
        position: relative;
      }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
>
  <div
    aria-live="assertive"
    className=

        {
          border: 0px;
          height: 1px;
          margin-bottom: -1px;
          margin-left: -1px;
          margin-right: -1px;
          margin-top: -1px;
          overflow: hidden;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          position: absolute;
          white-space: nowrap;
          width: 1px;
        }
    id="selected-suggestion-alert-id__0"
  >
    
  </div>
  <span
    hidden={true}
    id="selected-items-id__0-label"
  />
  <div
    className="ms-SelectionZone"
    onClick={[Function]}
    onContextMenu={[Function]}
    onDoubleClick={[Function]}
    onFocusCapture={[Function]}
    onKeyDown={[Function]}
    onKeyDownCapture={[Function]}
    onMouseDown={[Function]}
    onMouseDownCapture={[Function]}
    role="presentation"
  >
    <div
      className=
          ms-BasePicker-text
          {
            align-items: center;
            border-radius: 2px;
            border: 1px solid #605e5c;
            box-sizing: border-box;
            display: flex;
            flex-wrap: wrap;
            min-height: 30px;
            min-width: 180px;
            position: relative;
          }
          &:hover {
            border-color: #323130;
          }
    >
      <input
        aria-autocomplete="both"
        aria-expanded={false}
        aria-haspopup="listbox"
        autoCapitalize="off"
        autoComplete="off"
        className=
            ms-BasePicker-input
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              align-self: flex-end;
              background-color: transparent;
              border-radius: 2px;
              border: none;
              color: #323130;
              flex-grow: 1;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              height: 30px;
              outline: none;
              padding-bottom: 0;
              padding-left: 6px;
              padding-right: 6px;
              padding-top: 0;
            }
            &::-ms-clear {
              display: none;
            }
            &:placeholder-shown {
              text-overflow: ellipsis;
            }
            &::placeholder {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              opacity: 1;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&::placeholder {
              color: GrayText;
            }
            &:-ms-input-placeholder {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              opacity: 1;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:-ms-input-placeholder {
              color: GrayText;
            }
            &::-ms-input-placeholder {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              opacity: 1;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&::-ms-input-placeholder {
              color: GrayText;
            }
        data-lpignore={true}
        id="combobox-id__0"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onCompositionEnd={[Function]}
        onCompositionStart={[Function]}
        onCompositionUpdate={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        onKeyDown={[Function]}
        role="combobox"
        spellCheck={false}
        style={
          Object {
            "fontFamily": "inherit",
          }
        }
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`PeoplePicker renders correctly with preselected items 1`] = `
<div
  className=
      ms-BasePicker
      {
        position: relative;
      }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
>
  <div
    aria-live="assertive"
    className=

        {
          border: 0px;
          height: 1px;
          margin-bottom: -1px;
          margin-left: -1px;
          margin-right: -1px;
          margin-top: -1px;
          overflow: hidden;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          position: absolute;
          white-space: nowrap;
          width: 1px;
        }
    id="selected-suggestion-alert-id__0"
  >
    
  </div>
  <span
    hidden={true}
    id="selected-items-id__0-label"
  />
  <div
    className="ms-SelectionZone"
    onClick={[Function]}
    onContextMenu={[Function]}
    onDoubleClick={[Function]}
    onFocusCapture={[Function]}
    onKeyDown={[Function]}
    onKeyDownCapture={[Function]}
    onMouseDown={[Function]}
    onMouseDownCapture={[Function]}
    role="presentation"
  >
    <div
      className=
          ms-BasePicker-text
          {
            align-items: center;
            border-radius: 2px;
            border: 1px solid #605e5c;
            box-sizing: border-box;
            display: flex;
            flex-wrap: wrap;
            min-height: 30px;
            min-width: 180px;
            position: relative;
          }
          &:hover {
            border-color: #323130;
          }
    >
      <span
        aria-labelledby="selected-items-id__0-label"
        className=
            ms-BasePicker-itemsWrapper
            {
              display: flex;
              flex-wrap: wrap;
              max-width: 100%;
            }
        id="selected-items-id__0"
        role="list"
      >
        <div
          className=
              ms-PickerPersona-container
              {
                align-items: center;
                background: #f3f2f1;
                border-radius: 15px;
                cursor: default;
                display: inline-flex;
                margin-bottom: 1px;
                margin-left: 2px;
                margin-right: 2px;
                margin-top: 1px;
                max-width: 300px;
                min-width: 0px;
                outline: transparent;
                position: relative;
                user-select: none;
                vertical-align: middle;
              }
              &::-moz-focus-inner {
                border: 0;
              }
              .ms-Fabric--isFocusVisible &:focus:after {
                border: 1px solid #ffffff;
                bottom: -1px;
                content: "";
                left: -1px;
                outline: 1px solid #605e5c;
                position: absolute;
                right: -1px;
                top: -1px;
                z-index: 1;
              }
              :host(.ms-Fabric--isFocusVisible) &:focus:after {
                border: 1px solid #ffffff;
                bottom: -1px;
                content: "";
                left: -1px;
                outline: 1px solid #605e5c;
                position: absolute;
                right: -1px;
                top: -1px;
                z-index: 1;
              }
              &:hover {
                background: #edebe9;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                border: 1px solid WindowText;
              }
          data-selection-index={0}
          onClick={[Function]}
          role="listitem"
        >
          <div
            className=
                ms-PickerItem-content
                {
                  flex: 0 1 auto;
                  max-width: 100%;
                  min-width: 0px;
                  overflow: hidden;
                }
            id="selectedItemPersona-id__9"
          >
            <div
              className=
                  ms-Persona
                  ms-Persona--size24
                  ms-Persona--online
                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    align-items: center;
                    box-shadow: none;
                    box-sizing: border-box;
                    color: inherit;
                    display: flex;
                    font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                    font-size: 14px;
                    font-weight: 400;
                    height: 24px;
                    margin-bottom: 0px;
                    margin-left: 0px;
                    margin-right: 0px;
                    margin-top: 0px;
                    min-width: 24px;
                    padding-bottom: 0px;
                    padding-left: 0px;
                    padding-right: 0px;
                    padding-top: 0px;
                    position: relative;
                  }
                  & .contextualHost {
                    display: none;
                  }
            >
              <div
                className=
                    ms-Persona-coin
                    ms-Persona--size24
                    {
                      -moz-osx-font-smoothing: grayscale;
                      -webkit-font-smoothing: antialiased;
                      font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                      font-size: 14px;
                      font-weight: 400;
                    }
                role="presentation"
              >
                <div
                  className=
                      ms-Persona-imageArea
                      {
                        flex: 0 0 auto;
                        height: 24px;
                        position: relative;
                        text-align: center;
                        width: 24px;
                      }
                  role="presentation"
                >
                  <div
                    className=
                        ms-Image
                        ms-Persona-image
                        {
                          -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          border-radius: 50%;
                          border: 0px;
                          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                          font-size: 14px;
                          font-weight: 400;
                          height: 24px;
                          left: 0px;
                          margin-right: 10px;
                          overflow: hidden;
                          perspective: 1px;
                          position: absolute;
                          top: 0px;
                          width: 24px;
                        }
                    style={
                      Object {
                        "height": 24,
                        "width": 24,
                      }
                    }
                  >
                    <img
                      alt=""
                      className=
                          ms-Image-image
                          ms-Image-image--cover
                          ms-Image-image--portrait
                          is-notLoaded
                          is-fadeIn
                          {
                            display: block;
                            height: 100%;
                            object-fit: cover;
                            opacity: 0;
                            width: 100%;
                          }
                      onError={[Function]}
                      onLoad={[Function]}
                      src="https://res-1.cdn.office.net/files/fabric-cdn-prod_20230815.002/office-ui-fabric-react-assets/persona-female.png"
                    />
                  </div>
                  <div
                    className=
                        ms-Persona-presence
                        {
                          -ms-high-contrast-adjust: none;
                          background-clip: border-box;
                          background-color: #6BB700;
                          border-radius: 50%;
                          border: 2px solid #ffffff;
                          bottom: -2px;
                          box-sizing: content-box;
                          forced-color-adjust: none;
                          height: 8px;
                          position: absolute;
                          right: -2px;
                          text-align: center;
                          top: auto;
                          width: 8px;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                          background-color: Highlight;
                          border-color: Window;
                        }
                    role="presentation"
                  />
                </div>
              </div>
              <div
                className=
                    ms-Persona-details
                    {
                      display: flex;
                      flex-direction: column;
                      justify-content: space-around;
                      min-width: 0px;
                      padding-bottom: 0;
                      padding-left: 8px;
                      padding-right: 8px;
                      padding-top: 0;
                      text-align: left;
                      width: 100%;
                    }
              >
                <div
                  className=
                      ms-Persona-primaryText
                      {
                        color: #323130;
                        font-size: 14px;
                        font-weight: 400;
                        overflow: hidden;
                        text-overflow: ellipsis;
                        white-space: nowrap;
                      }
                      &:hover {
                        color: #201f1e;
                      }
                  dir="auto"
                >
                  <div
                    className=
                        ms-TooltipHost
                        {
                          display: inline;
                        }
                    onBlurCapture={[Function]}
                    onFocusCapture={[Function]}
                    onKeyDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    role="none"
                  >
                    Annie Lindqvist
                    <div
                      hidden={true}
                      id="tooltip2"
                      style={
                        Object {
                          "border": 0,
                          "height": 1,
                          "margin": -1,
                          "overflow": "hidden",
                          "padding": 0,
                          "position": "absolute",
                          "whiteSpace": "nowrap",
                          "width": 1,
                        }
                      }
                    >
                      Annie Lindqvist
                    </div>
                  </div>
                </div>
                <div
                  className=
                      ms-Persona-secondaryText
                      {
                        color: #605e5c;
                        display: none;
                        font-size: 12px;
                        font-weight: 400;
                        overflow: hidden;
                        text-overflow: ellipsis;
                        white-space: nowrap;
                      }
                  dir="auto"
                >
                  <div
                    className=
                        ms-TooltipHost
                        {
                          display: inline;
                        }
                    onBlurCapture={[Function]}
                    onFocusCapture={[Function]}
                    onKeyDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    role="none"
                  >
                    Designer
                    <div
                      hidden={true}
                      id="tooltip3"
                      style={
                        Object {
                          "border": 0,
                          "height": 1,
                          "margin": -1,
                          "overflow": "hidden",
                          "padding": 0,
                          "position": "absolute",
                          "whiteSpace": "nowrap",
                          "width": 1,
                        }
                      }
                    >
                      Designer
                    </div>
                  </div>
                </div>
                <div
                  className=
                      ms-Persona-tertiaryText
                      {
                        color: #605e5c;
                        display: none;
                        font-size: 14px;
                        font-weight: 400;
                        overflow: hidden;
                        text-overflow: ellipsis;
                        white-space: nowrap;
                      }
                  dir="auto"
                >
                  <div
                    className=
                        ms-TooltipHost
                        {
                          display: inline;
                        }
                    onBlurCapture={[Function]}
                    onFocusCapture={[Function]}
                    onKeyDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    role="none"
                  >
                    In a meeting
                    <div
                      hidden={true}
                      id="tooltip4"
                      style={
                        Object {
                          "border": 0,
                          "height": 1,
                          "margin": -1,
                          "overflow": "hidden",
                          "padding": 0,
                          "position": "absolute",
                          "whiteSpace": "nowrap",
                          "width": 1,
                        }
                      }
                    >
                      In a meeting
                    </div>
                  </div>
                </div>
                <div
                  className=
                      ms-Persona-optionalText
                      {
                        color: #605e5c;
                        display: none;
                        font-size: 14px;
                        font-weight: 400;
                        overflow: hidden;
                        text-overflow: ellipsis;
                        white-space: nowrap;
                      }
                  dir="auto"
                >
                  <div
                    className=
                        ms-TooltipHost
                        {
                          display: inline;
                        }
                    onBlurCapture={[Function]}
                    onFocusCapture={[Function]}
                    onKeyDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    role="none"
                  >
                    Available at 4:00pm
                    <div
                      hidden={true}
                      id="tooltip5"
                      style={
                        Object {
                          "border": 0,
                          "height": 1,
                          "margin": -1,
                          "overflow": "hidden",
                          "padding": 0,
                          "position": "absolute",
                          "whiteSpace": "nowrap",
                          "width": 1,
                        }
                      }
                    >
                      Available at 4:00pm
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            aria-labelledby="id__9 selectedItemPersona-id__9"
            className=
                ms-Button
                ms-Button--icon
                ms-PickerItem-removeButton
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  background-color: transparent;
                  border-radius: 15px;
                  border: none;
                  box-sizing: border-box;
                  color: #323130;
                  cursor: pointer;
                  display: inline-block;
                  flex: 0 0 auto;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 14px;
                  font-weight: 400;
                  height: 24px;
                  outline: transparent;
                  padding-bottom: 0;
                  padding-left: 4px;
                  padding-right: 4px;
                  padding-top: 0;
                  position: relative;
                  text-align: center;
                  text-decoration: none;
                  user-select: none;
                  width: 24px;
                }
                &::-moz-focus-inner {
                  border: 0;
                }
                .ms-Fabric--isFocusVisible &:focus:after {
                  border: 1px solid transparent;
                  bottom: 2px;
                  content: "";
                  left: 2px;
                  outline: 1px solid #605e5c;
                  position: absolute;
                  right: 2px;
                  top: 2px;
                  z-index: 1;
                }
                @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                  bottom: -2px;
                  left: -2px;
                  outline-color: ButtonText;
                  right: -2px;
                  top: -2px;
                }
                :host(.ms-Fabric--isFocusVisible) &:focus:after {
                  border: 1px solid transparent;
                  bottom: 2px;
                  content: "";
                  left: 2px;
                  outline: 1px solid #605e5c;
                  position: absolute;
                  right: 2px;
                  top: 2px;
                  z-index: 1;
                }
                @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                  bottom: -2px;
                  left: -2px;
                  outline-color: ButtonText;
                  right: -2px;
                  top: -2px;
                }
                &:active > span {
                  left: 0px;
                  position: relative;
                  top: 0px;
                }
                &:hover {
                  background-color: #f3f2f1;
                  background: #c8c6c4;
                  color: #201f1e;
                }
                @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover {
                  border-color: Highlight;
                  color: Highlight;
                }
                &:active {
                  background-color: #edebe9;
                  color: #005a9e;
                }
            data-is-focusable={true}
            id="id__9"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className=
                  ms-Button-flexContainer
                  {
                    align-items: center;
                    display: flex;
                    flex-wrap: nowrap;
                    height: 100%;
                    justify-content: center;
                  }
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className=
                    ms-Icon
                    ms-Button-icon
                    {
                      display: inline-block;
                    }
                    {
                      -moz-osx-font-smoothing: grayscale;
                      -webkit-font-smoothing: antialiased;
                      font-family: "FabricMDL2Icons";
                      font-style: normal;
                      font-weight: normal;
                      speak: none;
                    }
                    {
                      flex-shrink: 0;
                      font-size: 12px;
                      height: 16px;
                      line-height: 16px;
                      margin-bottom: 0;
                      margin-left: 4px;
                      margin-right: 4px;
                      margin-top: 0;
                      text-align: center;
                    }
                data-icon-name="Cancel"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
        </div>
      </span>
      <input
        aria-autocomplete="both"
        aria-describedby="selected-items-id__0"
        aria-expanded={false}
        aria-haspopup="listbox"
        autoCapitalize="off"
        autoComplete="off"
        className=
            ms-BasePicker-input
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              align-self: flex-end;
              background-color: transparent;
              border-radius: 2px;
              border: none;
              color: #323130;
              flex-grow: 1;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              height: 30px;
              outline: none;
              padding-bottom: 0;
              padding-left: 6px;
              padding-right: 6px;
              padding-top: 0;
            }
            &::-ms-clear {
              display: none;
            }
            &:placeholder-shown {
              text-overflow: ellipsis;
            }
            &::placeholder {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              opacity: 1;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&::placeholder {
              color: GrayText;
            }
            &:-ms-input-placeholder {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              opacity: 1;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:-ms-input-placeholder {
              color: GrayText;
            }
            &::-ms-input-placeholder {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              opacity: 1;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&::-ms-input-placeholder {
              color: GrayText;
            }
        data-lpignore={true}
        id="combobox-id__0"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onCompositionEnd={[Function]}
        onCompositionStart={[Function]}
        onCompositionUpdate={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        onKeyDown={[Function]}
        role="combobox"
        spellCheck={false}
        style={
          Object {
            "fontFamily": "inherit",
          }
        }
        value=""
      />
    </div>
  </div>
</div>
`;
